--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,18 +93,30 @@ p {
 	font-weight: bold;
 }
 
-button {
-	margin:50px auto 0 auto;
- 	display:block;
-}
-
-.heroPicked, .villainPicked {
-	float: left;
-
-}
-
 .heroesRemaining {
 	opacity: .3;
+}
+
+.villainsRemaining {
+	opacity: .3;
+}
+
+.attackButton {
+	visibility:hidden
+}
+
+.villainPickedResults p {
+	visibility: hidden;
+	background-color: #F5F5DC;
+	margin-left: 5px;
+	width: 100%;
+}
+
+.heroPickedResults p {
+	visibility: hidden;
+	background-color: #F5F5DC;
+	margin-left: 5px;
+	width: 100%;
 }
 
 
