--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,20 +24,20 @@ header {
 
 .bottomSection {
 	display: grid;
-	grid-template-columns: repeat(3, 1fr);
+	grid-template-columns: 1fr 1fr 1fr;
 	grid-column-gap: 1em;
 	grid-row-gap: 1em;
 }
 
 .heroesContainer, .villainsContainer {
 	display: grid;
-	grid-template-columns: repeat(4, 1fr);
+	grid-template-columns: 1fr 1fr 1fr 1fr;
 	grid-column-gap: 1em;
 	grid-row-gap: 1em;
 }
 
 img {
-	width: 145px;
+	width: 100%;
 	height: 145px;
 }
 
@@ -45,7 +45,13 @@ h4 {
 	font-size: 13px;
 }
 
+.enemy-nav {
+	background-color: #8FBC8F;
+}
+
+
 .subheading {
+	width: 50%;
 	margin: 0 auto;
 	color: white;
 	font-size: 16px;
@@ -107,20 +113,12 @@ h4 {
 
 .heroPicked, .villainPicked {
 	justify-self: center;
+	width: 50%;
+	margin: 0 auto;
 }
 
 .instructions p {
 	width: 50%;
 	font-size: 1.2em;
 	margin: 5px auto 40px auto;
-}
-
-@media only screen and (min-width: 768px) {
-}
-
-@media only screen and (min-width: 980px) {
-}
-
-@media only screen and (min-width: 1240px) {
-
 }
