--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,74 +1,65 @@
 body {
-	position: relative;
-	background-image: url("../images/backdrop2.jpg");
-	background-size: cover;
-	background-position: -27px 316px;
-	max-height: 500px;
-	min-height: 500px; 
+	background-color: #2474A6;
 	text-align: center;
 	font-family: 'Mina', sans-serif;
 	color: white;
+	margin: 0;
+	padding: 0;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-image: url(../images/backdrop.jpg);
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: 100%;
 }
 
-header {
-	margin-top: 30px;
-	font-size: 2em;
-}
-
-.topSection {
+.wrapper {
 	display: grid;
-	grid-template-columns: 1fr;
+	grid-template-columns: 1fr 4fr 1fr;
 	grid-column-gap: 1em;
 	grid-row-gap: 1em;
+	height: 100%;
 }
 
-.bottomSection {
+.heading {
+	color: black;
+}
+
+.left, .right {
+	background-color: rgba(0, 0, 0, 0.699);
+	box-shadow: 0 3px 6px #999, 0 3px 6px #999;
+}
+
+.heroesContainer, .villainsContainer{
+	display: grid;
+	grid-template-columns: 1fr;
+}
+
+.battleSection {
+	margin-top: 15%;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-column-gap: 1em;
 	grid-row-gap: 1em;
 }
 
-.heroesContainer, .villainsContainer {
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr;
-	grid-column-gap: 1em;
-	grid-row-gap: 1em;
-}
-
 img {
-	width: 100%;
-	height: 145px;
+	height: 80px;
 }
 
 h4 {
 	font-size: 13px;
 }
 
-.enemy-nav {
-	background-color: #8FBC8F;
-}
-
-
-.subheading {
-	width: 50%;
-	margin: 0 auto;
-	color: white;
-	font-size: 16px;
-}
-
 .villainsSubheading, .heroesSubheading {
 	color: #ffffff;
 	font-size: 28px;
 	position: relative;
-	border-bottom: 1px solid #333;
-	padding-bottom: 20px;
-	margin-bottom: 20px;
+	padding: 20px;
 } 
-
-.instructions {
-	padding: 8px;
-}
 
 .heroesRemaining, .villainsRemaining {
 	opacity: .3;
@@ -77,6 +68,12 @@ h4 {
 .attackButton, .resetButton {
 	visibility:hidden;
 	margin-top: 20px;
+}
+
+.attackButton:hover, .resetButton:hover  {
+	transform: scale(1.1,1.1);
+	transition: all 0.5s cubic-bezier(0,0,0.25,1);
+  transform-style: preserve-3d;
 }
 
 .villainPickedResults p, .heroPickedResults p {
@@ -88,27 +85,19 @@ h4 {
 	opacity: 0.5;
 }
 
-.hero img {
-	border: 2px solid #2474A6;
-	color: #ffffff;
-}
-
-.villain img {
-	border: 2px solid #E00B27;
-	color: #ffffff;
-}
-
 .hero:hover, .villain:hover {
-	opacity: 0.5;
+	transform: scale(1.1,1.1);
+	transition: all 0.5s cubic-bezier(0,0,0.25,1);
+  transform-style: preserve-3d;
 }
 
 .heroPicked .hero:hover, 
 .villainPicked .villain:hover, 
 .heroesRemaining .hero:hover,
 .villainsRemaining .villain:hover {
+	transform: none;
 	opacity: 1;
 	top: 0;
-	border: none;
 }
 
 .heroPicked, .villainPicked {
