--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,8 @@ body {
 .left, .right {
 	background-color: rgba(0, 0, 0, 0.699);
 	box-shadow: 0 3px 6px #999, 0 3px 6px #999;
+	margin-top: 25%;
+	margin-bottom: 25%;
 }
 
 .heroesContainer, .villainsContainer{
